fix: TagHero contrast

--- a/extensions/tags/less/forum/TagHero.less
+++ b/extensions/tags/less/forum/TagHero.less
@@ -1,5 +1,8 @@
 .TagHero {
-  &--colored {
-    --hero-color: #fff;
+  &--light {
+    --hero-color: @text-on-light;
+  }
+  &--dark {
+    --hero-color: @text-on-dark;
   }
 }
